test/success/nostd/basics/struct/main.sk
module Main {

struct Foo {

}


struct Boo[T] {
    f1: T
}

fn main() {

}

}