test/errors/recursive_data/struct/main.sk
module Main {

struct Foo {
    bar: Option[Foo],
}

fn main() {
}

}
